Added the ContainerField to the bundle, created the example application and updated the docs.

--- a/tux/resources/themes/stylesheets/sencha-tux/default/src/_all.scss
+++ b/tux/resources/themes/stylesheets/sencha-tux/default/src/_all.scss
@@ -2,5 +2,7 @@
 @import 'dataview/editablelist';
 @import 'dataview/gallery';
 
+@import 'field/container';
+
 @import 'progressbar/progressbar';
 @import 'progressbar/radial';
