Fixed the TUX images path from absolute to relative. Recompiled the editable-list and radial-progressbar examples.

--- a/tux/resources/themes/stylesheets/sencha-tux/base/src/_variables.scss
+++ b/tux/resources/themes/stylesheets/sencha-tux/base/src/_variables.scss
@@ -2,7 +2,7 @@
  * @var {string} $tux-root-dir
  * The absolute root directory where to found the TUX styles.
  */
-$tux-root-dir: '/TUX/tux';
+$tux-root-dir: '../../../../tux';
 
 /**
  * @var {string} $tux-images
